# devops-directive-kubernetes-course

./: _k3sup-setup-steps.sh  devbox.json
.github/workflows/: image-ci.yml
04-built-in-resource-types/ConfigMap/: Taskfile.yaml
04-built-in-resource-types/CronJob/: Taskfile.yaml
04-built-in-resource-types/GatewayAPI/: Taskfile.yaml
04-built-in-resource-types/Ingress/: Taskfile.yaml
04-built-in-resource-types/Job/: Taskfile.yaml
04-built-in-resource-types/PersistentVolume/: Taskfile.yaml
04-built-in-resource-types/RBAC/: Taskfile.yaml
04-built-in-resource-types/Secret/: Taskfile.yaml
04-built-in-resource-types/Service/: Taskfile.yaml
04-built-in-resource-types/StatefulSet/: Taskfile.yaml
06-demo-application/api-golang/: Dockerfile  Taskfile.yaml  Tiltfile
06-demo-application/api-node/: Dockerfile  Taskfile.yaml  Tiltfile
06-demo-application/client-react/: Dockerfile  Taskfile.yaml  Tiltfile
06-demo-application/load-generator-python/: Dockerfile  Taskfile.yaml  Tiltfile  pyproject.toml
06-demo-application/postgresql/: Taskfile.yaml
07-deploying-demo-application/: Taskfile.yaml
07-deploying-demo-application/api-golang/: Deployment.yaml  IngressRoute.yaml
07-deploying-demo-application/api-node/: Deployment.yaml  IngressRoute.yaml
08-extending-kubernetes/: README.md  operators.md
09-deploying-auxiliary-tooling/: job.yaml
10-developer-experience/: README.md
11-debugging/: commands.md  microservices-demo.yaml
12-deploying-to-multiple-environments/: commands.md
14-cicd/: Taskfile.yaml
14-cicd/kluctl-gitops/: .kluctl.yaml
(+19 files in other folders)
