[tool.poetry]
name = "load-generator-python"
version = "0.1.0"
description = ""
authors = ["sid palas"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.2"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
